# saffron-spice

./: .gitignore  CHANGELOG.md  README (1).md  README.md  Untitled-1.md  pyproject.toml  requirement.txt  requirements.txt  setup.py
SAFFRON/: __init__.py
SAFFRON.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SAFFRON/fit_models/: __init__.py
SAFFRON/init_handler/: gen_inits.py  gen_inits1.depr
SAFFRON/postprocessing/: compo_reader.py
SAFFRON/utils/: lock_tools.py  utils.py
SlimPy/: SlimPy.depr  requirements.info
SlimPy/fit_functions/: fit_pixel.py  fit_raster.py  fit_raster_1.py  fit_window.py  fit_window_1.py
SlimPy/init_handler/: __init__.py  gen_inits.depr  gen_inits.py
SlimPy/line_catalogue/: catalogue.py
SlimPy/manager/: __init__.py  manager.py
SlimPy/spice_utils/: README.md  setup.py
SlimPy/spice_utils/ias_spice_utils/: utils.py
SlimPy/spice_utils/ias_spice_utils.egg-info/: SOURCES.txt  requires.txt
SlimPy/utils/: __init__.py  denoise.py  error_finder.py  lock_tools.py
SlimPy/visualization/: __init__.py  graphs.py
ZZZlib/SAFFRON/: __main__.py
ZZZlib/SAFFRON/fit_functions/: fit_raster.py
ZZZlib/SAFFRON/init_handler/: gen_inits.depr
ZZZlib/SAFFRON/line_catalog/: SPICE_SpecLines.json  __init__.py
ZZZlib/SAFFRON/manager/: __init__.py  input_config_template.json
ZZZlib/SAFFRON/postprocessing/: __init__.py
fit_functions/: __init__.py  fit_pixel.py  fit_raster.py
fit_models/: gauss.py
ias_spice_utils/: STUDY-NAME_template.ipynb  utils.py
init_handler/: __init__.py  gen_inits.py
line_catalog/: SPICE_SpecLines.json  catalog.py
line_catalogue/: SPICE_SpecLines.json  __init__.py
manager/: input_config_template.json  manager.py
paris_saclay/06_PhD/ReAnalyseCompos/SAFFRON/init_handler/: gen_inits.py
paris_saclay/06_PhD/ReAnalyseCompos/SAFFRON/line_catalog/: SPICE_SpecLines.json  catalog.py
paris_saclay/06_PhD/ReAnalyseCompos/SAFFRON/utils/: utils.py
postprocessing/: __init__.py  compo_reader.py
saffron/: __init__.py  __main__.py
saffron.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt
saffron/Dev/: content_vis.py
saffron/fit_functions/: __init__.py  fit_pixel.py  fit_raster.py
saffron/fit_models/: Model.py  __init__.py  gauss.py  model_diagram.py
saffron/init_handler/: __init__.py  gen_inits.py
saffron/line_catalog/: SPICE_SpecLines.json  SPICE_SpecLines.json.depr  __init__.py  catalog.py
saffron/manager/: __init__.py  input_config_template.json  manager.py
saffron/postprocessing/: __init__.py  compo_reader.py
saffron/utils/: __init__.py  codec.py  denoise.py  despike.py  error_finder.py  fits_clone.py  lock_tools.py  nan_convolution.py  utils.py
saffron/visualization/: __init__.py  graphs.py
spice_utils/ias_spice_utils/: STUDY-NAME_template.ipynb
spice_utils/ias_spice_utils.egg-info/: PKG-INFO  top_level.txt
test/: test_codec.py  test_model.py
tmp/: Model_functions_20240830_181819.py  Model_functions_20240830_181821.py  Model_functions_20240830_181822.py  Model_functions_20240830_181823.py  Model_functions_20240830_181824.py  Model_functions_20240830_181912.py  Model_functions_20240830_181914.py  Model_functions_20240830_181915.py  Model_functions_20240830_181916.py  Model_functions_20240830_181917.py  Model_functions_20240830_181950.py  Model_functions_20240830_181952.py  Model_functions_20240830_181953.py  Model_functions_20240830_181954.py  Model_functions_20240830_181955.py  Model_functions_20240830_182247.py  Model_functions_20240830_182248.py  Model_functions_20240830_182249.py  Model_functions_20240830_182250.py  Model_functions_20240830_182251.py  Model_functions_20240830_184332.py  Model_functions_20240830_184334.py  Model_functions_20240830_184335.py  Model_functions_20240830_184336.py  Model_functions_20240830_184337.py  Model_functions_20240830_184338.py  Model_functions_20240830_184339.py
utils/: __init__.py  despike.py  utils.py
visualization/: graphs.py
