[tool.poetry]
authors = [
  "Slimane MZERGUAT <slimane.mzerguat@universite-paris-saclay.fr>",
  "Slimane MZERGUAT <mzerguat.sl@gmail.com>",
]
description = "SAFFRON: Spectral Analysis Fitting Framework, Reduction Of Noise."
homepage = "https://github.com/slimguat/SAFFRON"
license = "MIT"
name = "saffron-spice"
readme = "README.md"
version = "0.3.1"

packages = [
  {include = "saffron"},
]

[tool.poetry.dependencies]
astropy = "*" 
colorama = "*" 
docutils = ">=0.14,<0.21" 
fiplcr = "*" 
ipympl = "*" 
ipyparallel = "*" #Chiantipy needs it but it is not in the dependencies
ipywidgets = "*" 
matplotlib = "*" 
multiprocess = "*" 
ndcube = "*" 
numba = "*" 
numpy = "*" 
opencv-python = "*" 
pandas = "*" 
python = ">=3.9.10,<4.0" 
requests = "*" 
rich = "*" 
roman = "*" 
scipy = "*" 
setuptools = "*" 
sospice = "*" 
sunpy = "*" 
tqdm = "*" 
watroo = "*" 

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pytest = "*"
setuptools_scm = "*"

[tool.poetry.scripts]
saffron-gui = "saffron.__main__:GUI_init"
setup-chianti = "saffron.__main__:setup_chianti_database"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "setuptools_scm"]

[tool.setuptools_scm]
local_scheme = "dirty-tag"
version_scheme = "guess-next-dev"
